No me deja ver los tests, corregidos todos los warnings